UHF-433: Fix focus hover having wrong color on label

--- a/src/scss/components/block/_react-and-share.scss
+++ b/src/scss/components/block/_react-and-share.scss
@@ -50,6 +50,16 @@
               margin-top: 0;
             }
           }
+
+          .rns-reaction-button {
+            &:focus {
+              &:hover {
+                .rns-label {
+                  color: $color-bus;
+                }
+              }
+            }
+          }
         }
       }
     }
